Implement HealthService for iOS and add stubs for Android and Windows
- Added IHealthService interface for accessing health data (heart rate and step count).
- Implemented HealthService for iOS using HealthKit, including methods for authorization, retrieving heart rate, and step count.
- Created stub implementations of HealthService for Android and Windows, indicating that health services are not supported.
- Updated iOS Entitlements.plist to include HealthKit permissions.
- Added usage descriptions for health data access in Info.plist.
- Modified MainPage.xaml to remove unused code and clean up the layout.
- Updated Telepathic.csproj to include entitlements for iOS.

--- a/src/Telepathic/Platforms/iOS/Info.plist
+++ b/src/Telepathic/Platforms/iOS/Info.plist
@@ -48,5 +48,11 @@
 	
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>This app needs access to your photo library to select photos for creating tasks.</string>
+	
+	<key>NSHealthShareUsageDescription</key>
+	<string>This app needs access to your heart rate and step count to display health information on the sensors page.</string>
+	
+	<key>NSHealthUpdateUsageDescription</key>
+	<string>This app needs access to update your health data.</string>
 </dict>
 </plist>
