--- a/src/Telepathic/Platforms/iOS/Entitlements.plist
+++ b/src/Telepathic/Platforms/iOS/Entitlements.plist
@@ -3,6 +3,9 @@
 <plist version="1.0">
     <!-- See https://aka.ms/maui-publish-app-store#add-entitlements for more information about adding entitlements.-->
     <dict>
-        
+        <key>com.apple.developer.healthkit</key>
+        <true/>
+        <key>com.apple.developer.healthkit.access</key>
+        <array/>
     </dict>
 </plist>
